# noctis

./: .editorconfig  .gitignore  .huggingfaceignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy.py
backend/: .env.example  Makefile  migration.sql  pyproject.toml
backend/src/lethe/: main.py
backend/src/lethe/application/ports/: job_registry.py  project_repository.py
backend/src/lethe/application/services/: edl_builder.py
backend/src/lethe/application/use_cases/: apply_trim.py  detect_silence.py  toggle_segment.py
backend/src/lethe/domain/entities/: segment.py  video_project.py
backend/src/lethe/domain/events/: domain_events.py
backend/src/lethe/domain/ports/: audio_extractor.py  progress_emitter.py  vad_detector.py  video_editor.py
backend/src/lethe/infrastructure/cache/: __init__.py
backend/src/lethe/infrastructure/di/: container.py
backend/src/lethe/infrastructure/events/: log_progress_emitter.py
backend/src/lethe/infrastructure/repository/: in_memory_project_repo.py
backend/src/lethe/infrastructure/transcription/: __init__.py
backend/src/lethe/infrastructure/vad/: amplitude_vad_detector.py
backend/src/lethe/infrastructure/video/: ffmpeg_video_editor.py
backend/src/lethe/presentation/routes/: detect.py  project.py  segment.py  settings.py  thumbnails.py  transcription.py  trim.py  upload.py  waveform.py
backend/src/lethe/presentation/schemas/: detect_schemas.py  progress_schemas.py  project_schemas.py  segment_schemas.py
backend/src/lethe/presentation/ws/: progress.py
backend/src/lethe/shared/: exceptions.py  types.py
backend/src/noctis/: main.py
backend/src/noctis/shared/: db.py  exceptions.py
backend/supabase/.temp/: linked-project.json  pooler-url  project-ref
backend/tests/integration/: test_e2e.py  test_health.py  test_pipeline.py
backend/tests/unit/application/: test_edl_builder.py
backend/tests/unit/domain/: test_segment.py  test_time_range.py  test_video_project.py
(+79 files in other folders)
