[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lethe-backend"
version = "0.1.0"
description = "Lethe backend - video filler and silence removal service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "websockets>=12.0",
    "httpx>=0.27",
    "huggingface-hub>=1.16.1",
    "groq>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lethe"]

[tool.uv]
package = true

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "TCH",
    "ANN",
    "N",
    "RUF",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
mypy_path = "src"

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
